packages/cashc/test/compiler/ParseError/nonvoid_function_call.cash
contract Test() {
    return {
        hello() {
            require(true);
            ripemd160(true);
        }
    }
}
